--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.data-username=sa
+spring.datasource.data-password=
+spring.datasource.driver-class-name=org.h2.Driver
 
+spring.servlet.multipart.max-file-size=128MB
+spring.servlet.multipart.max-request-size=128MB
